# Threat_Detection_Agent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  dataaccesslayer.py  db.py  db_setup.py  pyproject.toml  schemas.py  server.py  utils.py
backend/agents/: __init__.py  config_generator.py  crew_analysis.py  prompts.py  tools.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: IncidentReport.tsx  ThoughtTrace.tsx
frontend/src/types/: index.ts
